# study_cpp_searcher

./: .gitignore  CMakeLists.txt  Crowler.cpp  Crowler.h  DbManager.cpp  DbManager.h  IniParser.cpp  IniParser.h  README.MD  SafeQueue.cpp  SafeQueue.h  Searcher.cpp  Searcher.h  config.ini  constants.h  exceptions.h  http_server_small.cpp  main.cpp
